# autocxx-crash

./: .clang-format  .clang-tidy  CMakeLists.txt  Cargo.toml  build.rs
cxx/include/: gen.hxx
cxx/lib/: cmake.cxx
src/: gen.rs  main.rs
